# validators/pokemon.mjs
@@ -5,6 +5,6 @@ export const pokemonValidationRules = () => {
     body('name').notEmpty().withMessage("name is required!"),
     body('type').notEmpty().withMessage("type is required!"),
     body('weakness').notEmpty().withMessage("weakness is required!"),
-    body('caughtAt').notEmpty().isDate().withMessage("caughtAt is required!"),
+    body('caughtAt').toDate().notEmpty().withMessage("caughtAt is required!"),
   ]
 }
